--- a/src/app/components/book/book.component.html
+++ b/src/app/components/book/book.component.html
@@ -7,7 +7,7 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">{{book.volumeInfo.title}}</h5>
-              <p class="card-text">By: {{book.volumeInfo.authors[0] ? book.volumeInfo.authors[0] : 'No Author found' }}</p>
+              <p class="card-text">By: {{book.volumeInfo?.authors[0] ? book.volumeInfo.authors[0] : 'No Author found' }}</p>
               <p class="card-text">Published By: {{book.volumeInfo.publisher ? book.volumeInfo.publisher : 'No Publisher found' }}</p>
               <a [href]="book.volumeInfo.infoLink" target="_blank" class="btn btn-success">See this book</a>
             </div>
@@ -15,3 +15,5 @@
         </div>
       </div>
 </div>
+
+
