making loader responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
   </form>
 </div>
 
-<div class="loading-message" *ngIf="loading">
+<div class=" container loading-message" *ngIf="loading">
   <i class="fas fa-stroopwafel fa-spin text-success"></i>
 </div>
 
