more bugs fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,3 +30,10 @@
   <app-book [searchResults]="searchedBookArray"></app-book>
 </div>
 
+<div class="container">
+  <p class="lead">{{information}}</p>
+</div>
+
+<!-- <div class="container" *ngIf="searchedBookArray.length === 0">
+  <p class="lead">Start searching for books</p>
+</div> -->
