--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 </div>
 
 <div class="container">
-  <p class="lead">{{information}}</p>
+  <p class="lead">{{searchedBookArray ? '' : information}}</p>
 </div>
 
 <!-- <div class="container" *ngIf="searchedBookArray.length === 0">
